--- a/build.gradle
+++ b/build.gradle
@@ -125,6 +125,7 @@ subprojects {
     dependencies {
         implementation 'org.springframework.boot:spring-boot-starter-actuator'
         implementation 'io.github.pixee:java-security-toolkit:1.2.2'
+        implementation 'com.stripe:stripe-java:24.10.0'
 
         //tmp for security bumps
         implementation 'ch.qos.logback:logback-core:1.5.18'
