Upgrade Flyway to 11.0.0 to support PostgreSQL 17 compatibility, resolving startup warning in deployments

--- a/build.gradle
+++ b/build.gradle
@@ -120,6 +120,9 @@ subprojects {
         imports {
             mavenBom "org.springframework.boot:spring-boot-dependencies:$springBootVersion"
         }
+        dependencies {
+            dependency 'org.flywaydb:flyway-core:11.0.0'
+        }
     }
 
     dependencies {
