Fix Flyway override syntax in build.gradle to properly resolve version 11.0.0 for PostgreSQL 17 support

--- a/build.gradle
+++ b/build.gradle
@@ -121,7 +121,7 @@ subprojects {
             mavenBom "org.springframework.boot:spring-boot-dependencies:$springBootVersion"
         }
         dependencies {
-            dependency 'org.flywaydb:flyway-core:11.0.0'
+            dependency("org.flywaydb:flyway-core:11.0.0")
         }
     }
 
